SET (C_FILES ${CMAKE_CURRENT_SOURCE_DIR}/convert.cpp)
SET (H_FILES ${CMAKE_CURRENT_SOURCE_DIR}/convert.hpp)
SET (OTHER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt)

IF (SOURCE_FILES)
	foreach(file ${C_FILES} ${H_FILES} ${OTHER_FILES})
		MESSAGE (STATUS "!@# ${file}")
	endforeach(file)
	RETURN()
ENDIF (SOURCE_FILES)

PROJECT (MiracleLibrary)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET (Boost_USE_STATIC_LIBS ON)
SET (Boost_USE_MULTITHREAD OFF)
FIND_PACKAGE (Boost COMPONENTS system)

IF (NOT Boost_FOUND)
	MESSAGE (FATAL_ERROR "boost library not found")
ENDIF (NOT Boost_FOUND)

INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIR})
LINK_LIBRARIES (${Boost_SYSTEM_LIBRARY})

#ADD_LIBRARY (miracle SHARED ${C_FILES})
ADD_LIBRARY (miracle-s STATIC ${C_FILES})

